2000-11-17  Jeff Freedman  <jeff@amy.nerble.net>

	* Use vector::iterators instead of going through indices.

2000-11-16  Tristan Tarrant <nadir@users.sourceforge.net>

	* files/databuf: Implemented an ExultDataSource which encapsulates
	all actions needed to create a BufferDataSource from a U7object
	* mouse.h, mouse.cc: Allow the use of a different shape file
	* exult.cc, game.cc, game.h, menulist.cc, menulist.h: Make use of 
	the above to have a mouse pointer in the menus

2000-11-16  Tristan Tarrant <nadir@users.sourceforge.net>

	* menulist.cc: fixed usage of vector
	* Makefile.win32, Makefile.cygwin:  updated by Travis Howell

2000-11-16  Jeff Freedman  <jeff@amy.nerble.net>

	* Finished work on removing class Vector that Max started.

2000-11-13  Tristan Tarrant <nadir@users.sourceforge.net>

	* bggame.cc: Load endgame fonts using Font class
	* sigame.cc: Likewise for intro
	* font.cc: Handle fonts coming from IFF files
	* gametxt.cc, gamewin.h: get rid of setup_endgame_fonts()
	* fnames.h: Get rid of some _FONT definitions
	* TODO: updated a bit

2000-11-13  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: make version 0.90alpha1
	* browser.cc: use new Font class

2000-11-12  Jeff Freedman  <jeff@amy.nerble.net>

	* egg.cc (Egg_object): Must be on or above egg.
	(Egg_object): Commented out code which I think is wrong.

	* Fixed crash in Vesper (Gargoyle inn).

2000-11-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Decayable/nondecayable bodies.

2000-11-09  Tristan Tarrant <nadir@users.sourceforge.net>

	* exult.cc: try harder to find 'exult.flx'.

2000-11-08  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Trying to fix weapon clipping.

2000-11-08  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in, tools/Makefile.am: only build the GIMP plugin if we
	  have GIMP > 1.1.26

2000-11-07  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: try harder to find ligimp/gimp.h