@@ -1,3 +1,7 @@
+2000-11-17  Tristan Tarrant <nadir@users.sourceforge.net>
+
+	* menulist.cc, game.cc: handle events better
+
 2000-11-17  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Use vector::iterators instead of going through indices.
